--- a/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentRouteControl.xaml
+++ b/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentRouteControl.xaml
@@ -15,6 +15,7 @@
               Style="{DynamicResource SystemsGridSettings}"
               RowStyle="{DynamicResource SystemsRowStyle}"
               CellStyle="{DynamicResource RouteCells}"
+              PreviewMouseWheel="DataGrid_PreviewMouseWheel"
               Loaded="DataGrid_Loaded"
               Unloaded="DataGrid_Unloaded"
               RowHeight="25"
@@ -107,6 +108,7 @@
                               Unloaded="BodyDataGrid_Unloaded"
                               EnableRowVirtualization="True"
                               GridLinesVisibility="Horizontal"
+                              PreviewMouseWheel="DataGrid_PreviewMouseWheel"
                               Style="{DynamicResource BodiesGridSettings}"
                               CellStyle="{DynamicResource BodiesGridCell}"
                               RowStyle="{DynamicResource RowStyleBodies}"
