--- a/ODExplorer/Controls/SettingsControls/BodyInfoDisplayControl.xaml
+++ b/ODExplorer/Controls/SettingsControls/BodyInfoDisplayControl.xaml
@@ -7,11 +7,13 @@
              xmlns:converters="clr-namespace:ODExplorer.WPFConverters"
              xmlns:models="clr-namespace:ODExplorer.Models"
              xmlns:viewvms="clr-namespace:ODExplorer.ViewModels.ViewVMs"
+             xmlns:sys="clr-namespace:System;assembly=netstandard"
              d:DataContext="{d:DesignInstance Type=viewvms:SettingsViewModel}"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
     <UserControl.Resources>
+        <Thickness x:Key="CheckBoxMargin">6</Thickness>
         <converters:BodyInfoIconDisplayConverter x:Key="bodyinfoEnumConverter" />
     </UserControl.Resources>
     <GroupBox Header="Current System Body Information Options"
@@ -24,6 +26,7 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -44,7 +47,7 @@
 
             <StackPanel Orientation="Vertical"
                         Grid.Row="1"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <TextBlock Text="N₂O₂"
                            FontSize="14"
@@ -63,7 +66,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="1"
                         Grid.Row="1"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <TextBlock Text="30 k"
                            FontSize="14"
@@ -82,7 +85,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="0"
                         Grid.Row="2"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <TextBlock Text="400 pa"
                            FontSize="14"
@@ -101,7 +104,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="1"
                         Grid.Row="2"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
                         Width="30"
@@ -125,7 +128,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="0"
                         Grid.Row="3"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
                         Width="30"
@@ -149,7 +152,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="1"
                         Grid.Row="3"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
                         Width="30"
@@ -173,7 +176,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="0"
                         Grid.Row="4"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
                         Width="30"
@@ -197,7 +200,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="1"
                         Grid.Row="4"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <StackPanel Orientation="Horizontal" Background="{DynamicResource DataGridRowUnknownBodyBackground}"
                         Width="40"
@@ -227,7 +230,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="0"
                         Grid.Row="5"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <StackPanel Orientation="Horizontal"
                             Background="{DynamicResource DataGridRowUnknownBodyBackground}"
@@ -258,7 +261,7 @@
             <StackPanel Orientation="Vertical"
                         Grid.Column="1"
                         Grid.Row="5"
-                        Margin="10"
+                        Margin="{StaticResource CheckBoxMargin}"
                         Width="200">
                 <TextBlock Text="0.25"
                            FontWeight="Bold"
@@ -273,7 +276,48 @@
                           Width="200"
                           Style="{DynamicResource CheckBoxStyle}"
                           IsChecked="{Binding IconDisplay, Converter={StaticResource bodyinfoEnumConverter}, ConverterParameter={x:Static models:BodyInfoIconDisplay.SurfaceGravity}}" />
-            </StackPanel>           
+            </StackPanel>
+
+            <StackPanel Orientation="Vertical"
+                        Grid.Row="6"
+                        Margin="{StaticResource CheckBoxMargin}"
+                        Width="200">
+                <Border Background="{DynamicResource DataGridRowUnknownBodyBackground}"
+                        Width="20">
+                    <Rectangle Fill="{DynamicResource DataGridRowUnknownBodyForeGround}"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Height="18"
+                               Width="18">
+                        <Rectangle.OpacityMask>
+                            <ImageBrush ImageSource="/Resources/SystemGridIcons/planet.png" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
+                </Border>
+                <CheckBox Content="Body Icon"
+                          Width="200"
+                          Style="{DynamicResource CheckBoxStyle}"
+                          IsChecked="{Binding ShowBodyIcon}" />
+            </StackPanel>
+
+            <StackPanel Orientation="Vertical"
+                        Grid.Row="6"
+                        Grid.Column="1"
+                        Margin="{StaticResource CheckBoxMargin}"
+                        Width="200">
+                <TextBlock Text="5"
+                           FontSize="14"
+                           Margin="0,0,0,5"
+                           HorizontalAlignment="Center"
+                           Width="20"
+                           TextAlignment="Center"
+                           Foreground="{DynamicResource DataGridRowUnknownBodyForeGround}"
+                           Background="{DynamicResource DataGridRowUnknownBodyBackground}" />
+                <CheckBox Content="Body ID"
+                          Width="200"
+                          Style="{DynamicResource CheckBoxStyle}"
+                          IsChecked="{Binding ShowBodyId}" />
+            </StackPanel>
         </Grid>
     </GroupBox>
 </UserControl>
