--- a/ODExplorer/ResourceDictionaries/SystemGridStyles.xaml
+++ b/ODExplorer/ResourceDictionaries/SystemGridStyles.xaml
@@ -221,12 +221,16 @@
            TargetType="{x:Type TextBlock}">
         <Setter Property="HorizontalAlignment"
                 Value="Center" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
     </Style>
 
     <Style x:Key="DataGridElementLeft"
            TargetType="{x:Type TextBlock}">
         <Setter Property="HorizontalAlignment"
                 Value="Left" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
     </Style>
 
     <Style x:Key="DataGridElementLeftMargin"
@@ -234,7 +238,7 @@
         <Setter Property="HorizontalAlignment"
                 Value="Left" />
         <Setter Property="Margin"
-                Value="5,0,0,0" />
+                Value="5,0" />
     </Style>
     
     <Style x:Key="SystemValueElement"
