--- a/ODExplorer/Views/DisplaySettingsView.xaml
+++ b/ODExplorer/Views/DisplaySettingsView.xaml
@@ -12,6 +12,10 @@
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="{x:Type TextBlock}"
+               BasedOn="{StaticResource DisabledText}" />
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition  />
